<resources>
    <string name="app_name">NewNine\nBank</string>
    <string name="open_account_text">Open account</string>
    <string name="enter_text">Enter</string>
    <string name="password_text">Enter Password</string>
    <string name="enter_account_text">Enter account</string>
    <string name="cancel_text">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="recharge_phone_text">Recharge\nPhone</string>
    <string name="payments_text">Payments</string>
    <string name="pix_text">PIX</string>
    <string name="savings_text">Savings</string>
    <string name="loan_available_text">Available value of up to %1$s</string>
    <string name="bank_loan_text">Bank loan</string>
    <string name="transfer_text">Transfer</string>
    <string name="financial_statement">Financial\nstatement</string>
    <string name="investments_text">Investments</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="navigate_up_text">Back</string>
    <string name="current_bill_text">Current bill\n%1$s</string>
    <string name="month_transactions_text">\tMonth\'s Transactions</string>
    <string name="saved_value_text">\tSaved value: %1$s</string>
    <string name="account_income_text">Total account income +%1$s this month</string>
    <string name="available_limit_text">Available limit:%1$s </string>
    <string name="credit_card_text">Credit Card</string>
    <string name="account_currency_text">Account\n%1$s</string>
    <string name="available_balance_title">Available Balance\n%1$s</string>
    <string name="available_balance_dialog">Available Balance %1$s</string>
    <string name="history_text">History</string>
    <string name="search_text">Search</string>
    <string name="ninebank_slogan">Ninebank. Together we make the\nworld a better place.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_text">Hello,&#128513;</string>
    <string name="welcome_text">Welcome to NineBank!</string>
    <string name="open_account_enter_email">Enter an e-mail…</string>
    <string name="open_account_enter_name_hint"> Enter name</string>
    <string name="open_account_enter_cpf_hint"> Enter CPF</string>
    <string name="open_account_title">Opening an account is quick and safe. And we\'ll help you every step of the way.</string>
    <string name="open_account_name">First, what is your name?</string>
    <string name="social_name_button_text">I want to use my social name </string>
    <string name="open_account_cpf">NineBank accounts (personal and business) are always linked to your CPF, please enter your CPF.</string>
    <string name="open_account_terms_text">To continue, you need to read our Terms of Use and Privacy Policy.</string>
    <string name="open_account_terms_button_text">Open terms of use</string>
    <string name="content_description_account_currency"> account currency %1$s,open financial statement</string>
    <string name="open_account_input_button_text">Accept Terms of Use and Privacy Policy.</string>
    <string name="open_account_types_of_account">Now that you know more about NineBank, select the type of personal account that best suits you.</string>
    <string name="teen_account_title_text">Teen Account</string>
    <string name="open_account_enter_password">Enter a password</string>
    <string name="teen_account_text">With NinebankTeen your child has their own investments, account, card and app, connected to their Ninebank account so you can keep a close eye on everything.</string>
    <string name="joint_account_title_text">Joint Account</string>
    <string name="joint_account_text">Joint account: any account holder can make financial transactions independently Simple joint account (or non-solidary): to make transactions, the signature of each account holder is required.</string>
    <string name="individual_account_title_text">Individual Account</string>
    <string name="individual_account_text">Full current account, credit card with no annual fee (subject to analysis), an ideal platform for investing in Brazil and around the world</string>
    <string name="positive_text">Yes</string>
    <string name="negative_text">No</string>
    <string name="open_account_dialog_title">Cancel the opening of your account?</string>
    <string name="open_account_dialog_message">You will lose all the information you have filled in.</string>
    <string name="button_confirm">Confirm</string>
    <string name="select_type_of_account_text">Select</string>
    <string name="bank_loan_headline">Bank loan</string>
    <string name="right_emoji">&#128077;</string>


    <string name="my_card">my cards</string>
    <string name="transfer_value">Qual o valor da transferência?</string>
    <string name="send_text">send</string>
    <string name="hide_option_text">hide_option</string>
    <string name="option_question_mark" />
    <string name="benefits_text">Ninebank Benefits</string>
</resources>